# CMakeSamples

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md
Ex01/: CMakeLists.txt  Main.cpp  README.md
Ex02/: CMakeLists.txt  Main.cpp  README.md
Ex03/: CMakeLists.txt  Hello.cpp  README.md
Ex04/: CMakeLists.txt  README.md
Ex05Exe/: CMakeLists.txt  Main.cpp  README.md
Ex05Lib/: CMakeLists.txt  Hello.cpp  Hello.h  README.md
Ex06/: CMakeLists.txt  Main.cpp  README.md
Ex07/: CMakeLists.txt  Main.cpp  README.md
Ex08/: CMakeLists.txt  Main.cpp  README.md
